* css collapse controls style fix * _toggle method rewritten (now supports initially collapsed mode for slide panel types)

--- a/ui.panel.css
+++ b/ui.panel.css
@@ -10,4 +10,4 @@
 .ui-panel-rightbox .ui-icon { border:0; margin-right:0.1em; }
 .ui-panel-controls { float:left; margin: 0.2em 0.7em 0 0;}
 .ui-panel-content { padding:0.7em 0.4em 0.7em 0.4em; }
-.ui-panel-clps-pnl { border:1px solid #999; float:left; padding:0 0.25em 0.3em 0.25em; }
+.ui-panel-clps-pnl { position:relative; top:-0.1em; border:1px solid #999; float:left; padding:0 0.25em 0.3em 0.25em; }
